objects/SSV_Analysis__c.object
<CustomObject>
    <description>Created as part of the MDM project to analyze test data for better match opportunities. Has little value in Prod.

Object created to hold data for deeper analysis of match opportunities.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the related Account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SSV_Analysis</relationshipLabel>
        <relationshipName>SSV_Analysis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Combinations_For_Email__c</fullName>
        <label>Combinations For Email</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to a related Contact.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SSV_Analysis</relationshipLabel>
        <relationshipName>SSV_Analysis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Set_ID__c</fullName>
        <label>Duplicate Set ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Domain__c</fullName>
        <label>Email Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Local_Part__c</fullName>
        <label>Email Local Part</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Good_Matches_for_Email__c</fullName>
        <label>Good Matches for Email</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Id_Match_Key__c</fullName>
        <formula>Email__c &amp; &apos;,&apos; &amp; Last_Name__c &amp; &apos;,&apos; &amp; First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id Match Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Name_In_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Name In Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Record_Score__c</fullName>
        <label>Master Record Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Master_for_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Master for Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Records_for_Email__c</fullName>
        <label>Records for Email</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_System_Last_Modified_Date__c</fullName>
        <label>Source System Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Source_System_View__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Source System View used to create a record instance of SSV Analysis.</description>
        <label>Source System View</label>
        <referenceTo>Source_System_View__c</referenceTo>
        <relationshipLabel>SSV_Analysis</relationshipLabel>
        <relationshipName>SSV_Analysis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>SSV_Analysis</label>
    <nameField>
        <label>SSV_Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SSV_Analysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>